--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@headlessui/react": "^2.2.0",
     "@hookform/resolvers": "^3.10.0",
+    "@react-email/components": "^0.0.32",
+    "@react-email/render": "^1.0.4",
+    "@sendgrid/mail": "^8.1.4",
     "framer-motion": "^11.17.0",
     "lodash": "^4.17.21",
     "next": "15.1.4",
@@ -19,6 +22,8 @@
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
     "react-phone-input-2": "^2.15.1",
+    "resend": "^4.1.1",
+    "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "zod": "^3.24.1"
   },
