--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-email/components": "^0.0.32",
     "@react-email/render": "^1.0.4",
     "@sendgrid/mail": "^8.1.4",
-    "framer-motion": "^11.17.0",
+    "aos": "^2.3.4",
     "lodash": "^4.17.21",
     "next": "15.1.4",
     "react": "^19.0.0",
@@ -29,6 +29,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/aos": "^3.0.7",
     "@types/lodash": "^4.17.14",
     "@types/node": "^20",
     "@types/react": "^19",
